modified the heading

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         </head>
 
         <body>
-            <h1>Odin Recipes</h1>
+            <h1>Odin Carbonara Recipes</h1>
             <ul>
                 <li><a href="recipes/fettuccini_carbonara.html">Fettuccini Carbonara</a></li>
                 <li><a href="recipes/italian_carbonara.html">Italian Carbonara</a></li>
