--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
         <body>
             <h1>Odin Carbonara Recipes</h1>
+            <img src="images/chef.jpg" alt="Chef Cooking">
             <ul>
                 <li><a href="recipes/fettuccini_carbonara.html">Fettuccini Carbonara</a></li>
                 <li><a href="recipes/italian_carbonara.html">Italian Carbonara</a></li>
