--- a/recipes/italian_carbonara.html
+++ b/recipes/italian_carbonara.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Italian Carbonara</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
     <h1>Italian Carbonara Recipe</h1>
