--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         </head>
 
         <body>
-            <h1>Odin Carbonara Recipes</h1>
+            <h1>Odin's Carbonara Recipes</h1>
             <img src="images/odin.png" alt="Odin">
             <ul>
                 <li><a href="recipes/fettuccini_carbonara.html">Fettuccini Carbonara</a></li>
